// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown should pass onClick 1`] = `
<div
  onClick={[Function]}
>
  <RowComponent
    className="tab"
    headerClass="headerLogo"
    headerSymbol="SORT"
    mainContent="Sort Alphabetically"
    onClick={[Function]}
  />
  <RowComponent
    className="tab"
    headerClass="headerLogo"
    headerSymbol="SORT_CREATION"
    mainContent="Sort by Creation Date"
    onClick={[Function]}
  />
  <RowComponent
    className="tab"
    headerClass="headerLogo"
    headerSymbol="STAR"
    mainContent="Sort by Priority"
    onClick={[Function]}
  />
</div>
`;

exports[`DropDown should render 1`] = `
<div
  className="className"
>
  <RowComponent
    className="tab"
    headerClass="headerLogo"
    headerSymbol="SORT"
    mainContent="Sort Alphabetically"
    onClick={[Function]}
  />
  <RowComponent
    className="tab"
    headerClass="headerLogo"
    headerSymbol="SORT_CREATION"
    mainContent="Sort by Creation Date"
    onClick={[Function]}
  />
  <RowComponent
    className="tab"
    headerClass="headerLogo"
    headerSymbol="STAR"
    mainContent="Sort by Priority"
    onClick={[Function]}
  />
</div>
`;
